@@ -1,3 +1,8 @@
+2005-05-17  Daniel South  <wildcard_25@users.sourceforge.net>
+
+	* tkchat.tcl: Remove import of tile:: namespace now that we require
+	Tile 0.5. [Patch 1196561]
+
 2005-05-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Applied patch #1196561 from Daniel South to remove
